--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 <style>
 </style>
 <body>
-  <div class="center">
-<div class="main">
-      <a class="push_button sfw" href="rooster.html">SFW</a>
-</div>
-<div class="main">
-      <a class="push_button nsfw" href="penis.html">NSFW</a>
+
+  <div class="outer">
+    <div class="inner">
+      <div class="main"><h1>What sort of insperation are you after?<h1></div>
+    </div>
   </div>
-
-
-</div></div>
-
+  <div class="outer">
+    <div class="inner">
+    <a class="push_button sfw" href="sfw.html">Work Appropriate Insperation</a>
+  </div>
+  <div class="inner"><a class="push_button nsfw" href="nsfw.html">After Dark Insperation</a>
+  </div>
 </body>
 </html>
